<resources>
    <string name="app_name">Unit Converter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment" translatable="false">Hello blank fragment</string>
    <string name="Time_text">Time</string>
    <string name="cardView_logo_image">cardView logo image</string>
    <string name="dashboard">Dashboard</string>
    <string name="length">Length</string>
    <string name="temp">Temperate</string>
    <string name="currency">Currency</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="usd">USD</string>
    <string name="eu">EUR</string>
    <string name="meter">Meter</string>
    <string name="centimeter">Centimeter</string>
    <string name="convert">Convert</string>
    <string name="length_welcome_text">Welcome to \nLength Section</string>
    <string name="hint_length">enter a number to conver any length...</string>
    <string name="output_length_text">Meter To Centimeter\n Conversion Result</string>
    <string name="equal">Equal TO</string>
    <string name="exm_c_m">1000 C.M</string>
    <string name="exm_m">10 M</string>
    <string name="welcome_currency_text">Welcome to \nCurrency Section</string>
    <string name="hint_currency">enter a amout convert currency...</string>
    <string name="input_currency_text">USD To EUR\n Conversion Result</string>
    <string name="exm_usd">100 USD</string>
    <string name="exm_eu">92.22 EU</string>
    <string name="welcome_temp_text">Welcome to \nTemperature Section</string>
    <string name="hint_temp">enter any number to covert temp</string>
    <string name="output_welcome_text_temp">Celsius To Fahrenheit\n Conversion Result</string>
    <string name="exm_c">30° C</string>
    <string name="exm_f">86° F</string>
    <string name="output_welcome_text_time">NanoSecond To MicroSecond \nConversion Result</string>
    <string name="exm_s">3 S</string>
    <string name="exm_m_s">3000 M.S</string>
    <string name="second">Second</string>
    <string name="input_welcome_text_time">Welcome to \nTime Section</string>
    <string name="hint_time_section">enter a time to convert any time...</string>
    <string name="this_is_a_logo_for_splash_screen">this is a logo for splash screen</string>
    <string name="dev_name">By\nJubayed Alam</string>
    <string name="splash_text">Unit Converter</string>
    <string name="millisecond">Millisecond</string>

    <!-- res/values/strings.xml -->
    <!--    for time section -->
    <string-array name="time_name">
        <item>Second</item>
        <item>Millisecond</item>
        <item>MicroSecond</item>
        <item>NanoSecond</item>
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>FortNight</item>
        <item>Month</item>
        <item>Year</item>
        <item>LeapYear</item>
        <item>Decade</item>
        <item>Century</item>
    </string-array>

    <!--    for currency section -->
    <string-array name="currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>BDT</item>
        <item>INR</item>
        <item>CAD</item>
    </string-array>

    <!--    for currency section -->
    <string-array name="tempSection">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <!--    for currency section -->
    <string-array name="lengthSection">
        <item>Meter</item>
        <item>Centimeter</item>
        <item>Millimeter</item>
        <item>Micrometer</item>
        <item>Nanometer</item>
        <item>Kilometer</item>
    </string-array>


</resources>