<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.ui.fragment.CurrencyFragment">

    <!--this is the card section with input section-->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="12dp"
        app:strokeColor="#673AB7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--welcome section-->
            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/length_welcome_text"
                android:textSize="36sp" />

            <!--this is the input the number section-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="#673AB7">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_length"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--input section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!--from section-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:boxStrokeColor="#673AB7"
                        app:endIconDrawable="@drawable/ic_down"
                        app:endIconTint="@color/teal">

                        <AutoCompleteTextView
                            android:id="@+id/fromSection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:text="@string/meter"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/fromSection_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/meter"
                        android:textSize="16sp" />
                </LinearLayout>
                <!--to section-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:boxStrokeColor="#673AB7"
                        app:endIconDrawable="@drawable/ic_down"
                        app:endIconTint="@color/teal">

                        <AutoCompleteTextView
                            android:id="@+id/toSection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:text="@string/centimeter"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/toSectionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/centimeter"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/lengthConvert"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="12dp"
                android:text="@string/convert"
                android:textSize="20sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--this is the card section with output section-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/outputCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="12dp"
        app:strokeColor="#673AB7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_output"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/output_length_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/outputFrom"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner"
                android:elevation="20dp"
                android:gravity="center"
                android:text="@string/exm_m"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/equal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/outputTo"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:text="@string/exm_c_m"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>